<resources>
    <string name="app_name">Cool Weather App</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_pressure">Sea Level Pressure</string>
    <string name="label_wind_dir">Wind Direction</string>
    <string name="label_wind_speed">Wind Speed</string>
    <string name="label_temp">Temperature</string>
    <string name="label_time">Time</string>
    <string name="btn_update">Update</string>
</resources>